# TicTacToe

./: ChangeLog.md  Game.hs  LICENSE  Logic.hs  README.md  TicTacToe.cabal  cabal.sandbox.config
.cabal-sandbox/: add-source-timestamps  world
.cabal-sandbox/x86_64-windows-ghc-8.4.2-packages.conf.d/: adjunctions-4.4-FwzD0ZJ04F2C5CeKgl0Ecp.conf  base-orphans-0.7-85wcea2rRmdArILlfYz5fz.conf  bifunctors-5.5.2-I6vayq80OoE5GUbTpuoSv4.conf  bmp-1.2.6.3-AtMnUZSHSNC4NZtXFSUl0l.conf  cabal-doctest-1.0.6-E57gwmEN5fa2uY0bq8bb44.conf  comonad-5.0.3-2XifV2IcWx5ApkoQyAEu8o.conf  contravariant-1.4.1-Am3ECSWrQ4rCktPoOIqB8g.conf  distributive-0.5.3-ChQZWQR3gTh1FcCfULJsdF.conf  exceptions-0.10.0-DmsI5QMvE6e6QgVkMINEKb.conf  fail-4.9.0.0-BAHmj60kS5K7NVhhKpm9J5.conf  free-5.0.2-LUDOYmorvPjJtfFrAd0hYF.conf  gloss-1.12.0.0-9A2HzS8T5gBFwKy6jeVIYe.conf  gloss-rendering-1.12.0.0-1jktVvRkoE7L5SAJjCSQGa.conf  kan-extensions-5.1-1MN30aj4Anf2yGXEMeP60I.conf  lens-4.16.1-AemIxZdGLXA725vLQO03r5.conf  package.cache  profunctors-5.2.2-8FRszWGaAzNKig3Z6EEgsF.conf  reflection-2.1.3-4SrNpWQSBW2LTCJ2jLk3f1.conf  semigroupoids-5.2.2-96FW2ega4VtDJmxfL1sU8H.conf  semigroups-0.18.4-1f5UTvQ71ncLtJRLrtOIKd.conf  tagged-0.8.5-9esiG5iSDt67hASxvO39xh.conf  th-abstraction-0.2.6.0-8bhBYrrqrAJFCd9hjMrFb4.conf  transformers-base-0.4.5.2-DYh9E4psujGBTlOk5Y999r.conf  transformers-compat-0.6.2-682b8VXWs0S7WzvAIZy3S3.conf  void-0.7.2-JAsenjnj1DBHDal2sW0JoW.conf
.cabal-sandbox/x86_64-windows-ghc-8.4.2/bifunctors-5.5.2-I6vayq80OoE5GUbTpuoSv4/: Paths_bifunctors.hi
src/: Logic.hs  Main.hs  Rendering.hs
(+280 files in other folders)
