cabal-version: 2.2
name:
  TicTacToe
version:
  0.1.0.0
synopsis:
  Implementation of Tic Tac Toe to learn about graphics in Haskell
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Justin Prindle
maintainer:
  justindprindle@gmail.com
category:
  Game
build-type:
  Simple
extra-source-files:
  ChangeLog.md

executable TicTacToe
  main-is:
    Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    , array
    , base
    , gloss >= 1.13 && < 1.14
    , lens >= 4.17 && < 4.18
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  other-modules:
    Rendering, Game, Logic

